# kaggle_ml

./: 02-production-notes.ipynb  README.md  adding-images-kernel.ipynb  arxiv-opencontrail-nutshell.ipynb  contrail-net-vision.ipynb  contrails-init-data-stats-histograms.ipynb  cost-sensitive-machine-failure-triage.ipynb  create-a-mae-dictionary-and-find-min-maes.ipynb  dark-mode-in-a-nutshell.ipynb  demo.py  directory-tree-generator.ipynb  directory_tree_generator.ipynb  exercise-advanced-uses-of-shap-values.ipynb  exercise-explore-your-data.ipynb  exercise-introduction.ipynb  exercise-machine-learning-competitions.ipynb  exercise-missing-values.ipynb  exercise-model-validation.ipynb  exercise-partial-plots.ipynb  exercise-permutation-importance.ipynb  exercise-random-forests.ipynb  exercise-shap-values.ipynb  exercise-underfitting-and-overfitting.ipynb  exercise-your-first-machine-learning-model.ipynb  fastai-02-production-test-writing-0-00-1.ipynb  fastai-book-lesson2-simplified.ipynb  fastai-fastai-book-lesson2-production.ipynb  fork-of-contrails-rle-submission.ipynb  fork-of-exercise-advanced-uses-of-shap-values.ipynb  fork-of-exercise-introduction.ipynb  fork-of-exercise-missing-values.ipynb  fork-of-fastai-book-lesson2-simplified.ipynb  fork-of-getting-started-with-santa-2022.ipynb  fork-of-is-it-a-bird-creating-a-model-from-your-own-data.ipynb  fork-of-is-it-a-bird-creating-a-model-from-your.ipynb  fork_adding-images-kernel.ipynb  fork_of_exercise-missing-values.ipynb  getting-started-with-santa-2022.ipynb  global-food-security.ipynb  (+27 more)
archive/: mermaid.md  (+14 more)
(+1 files in other folders)
