[tool.poetry]
name = "this-package"
version = "0.0.0"
description = "configuring toml"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "this_package"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
