[tool.poetry]
name = "kaggle-ml"
version = "0.1.0"
description = ""
authors = ["patree <treeshnapati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
